edited About me text in index.html file fixed navbar background color for easier link  readability and change portfolio.html navbar to sticky top and file css with new id's

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,8 @@
 /* #asi{
 } */
 
-nav{
-  background-color: #90a8b3;
+#indexnav{
+  background-color: #cedee4;
 }
 /* p:hover {
   text-decoration: underline; 
@@ -33,7 +33,7 @@ row2 {
   position: relative; 
   margin-top: 50px;
   /* background :rgba(0, 151, 19, 0.1); */
-  background-color: rgb(132, 157, 180, 0.9);
+  background-color: rgba(194, 200, 205, 0.9);
   /* width: 750px; */
   margin-bottom: 0;
   /* height: 980px; */
@@ -134,6 +134,19 @@ aside {
   color: white;
 }
 
+#face22:hover{
+  background: transparent !important;
+}
+#face2:hover{
+  background: transparent !important;
+}
+.fa-linkedin:hover{
+  background: transparent !important;
+}
+.fa-snapchat-ghost:hover{
+  background: transparent !important;
+}
+
 #cot {
   /* border: 8px solid rgb(37, 88, 106); */
   margin-top: 30px;
@@ -209,7 +222,7 @@ img:hover {
   background-color: #e3f2fd;
 }
 #tope{
-  background-color: #576a78;
+  background-color: #bbd8ec;
 }
 body{
   width: 100%;
